name: lurk
version: 0.1.0.0
-- synopsis: 
-- description: 
license: BSD3
license-file: LICENSE
author: Joe Vargas
maintainer: jxv@hush.com
-- copyright: 
-- category: 
build-type: Simple
-- extra-source-files: 
cabal-version: >=1.10

executable lurk
    main-is: Main.hs
    -- other-modules: 
    -- other-extensions: 
    build-depends:
        base >=4.7 && <4.8
    hs-source-dirs: src
    default-language: Haskell2010
